@@ -79,6 +79,29 @@
     (setf (image-property image :width) nil)
     (should-equal image '(image))))
 
+(ert-deftest read-multiple-choice ()
+  (let ((orig-re (symbol-function #'read-event))
+        (orig-rc (symbol-function #'read-char))
+        ;;(orig-cr completing-read-function)
+        )
+    (unwind-protect
+        (dolist (test '(("Choose"
+                         (?a "first" "first description")
+                         (?b "second" "second description")
+                         (?c "third"))
+                        ("Do it?" (?y "yes") (?n "no"))))
+          (dolist (choice (cdr test))
+            (fset #'read-char (lambda (&rest _) (car choice)))
+            (fset #'read-event (lambda (&rest _) (car choice)))
+            ;; TODO long form support
+            ;;(setq completing-read-function (lambda (&rest _) (cadr choice)))
+            ;;(should-equal choice (read-multiple-choice (car test) (cdr test) nil nil 'long))
+            (should-equal choice (read-multiple-choice (car test) (cdr test)))))
+      (fset #'read-event orig-re)
+      (fset #'read-char orig-rc)
+      ;;(setq completing-read-function orig-cr)
+      )))
+
 (ert-deftest with-environment-variables ()
   (let ((A "COMPAT_TESTS__VAR") (B "/foo/bar"))
     (should-not (getenv A))
