@@ -590,7 +590,7 @@ Processes,,,elisp}), and as the program to run on the remote host.  If
 @xref{Magic File Names,,,elisp}.
 @end defun
 
-@defun read-multiple-choice prompt choices &optional help-string show-help long-form
+@defun read-multiple-choice prompt choices
 Ask user a multiple choice question.  @var{prompt} should be a string
 that will be displayed as the prompt.
 
@@ -599,16 +599,6 @@ character to be entered, the second element is a short name for the
 entry to be displayed while prompting (if there's room, it might be
 shortened), and the third, optional entry is a longer explanation that
 will be displayed in a help buffer if the user requests more help.
-
-If optional argument @var{long-form} is non-@code{nil}, the user
-will have to type in long-form answers (using @code{completing-read})
-instead of hitting a single key.  The answers must be among the second
-elements of the values in the @var{choices} list.
-
-@b{Note:} The Compat implementation of this function ignores the
-optional arguments @var{help-string} and @var{show-help}.  Therefore the
-optional third element in each @var{choices} entry will also be
-disregarded.
 
 See @ref{Reading One Event,Reading One Event,,elisp,}.
 @end defun
